2008-03-08  Cedric GESTES  <ctaf42@gmail.com>
	* template : description
	* regexp : write regexp

2008-03-07  Cedric GESTES  <ctaf42@gmail.com>
	* gui : get back value from widget
	* regexp : support regexp template (with regexp:templatename configobject)
	* gui : save button

2008-03-06  Cedric GESTES  <ctaf42@gmail.com>
	* parser : support include

2008-03-05  Cedric GESTES  <gestes@aldebaran-robotics.com>
	* autotools: datadir/boost regexp

2008-03-05  Cedric GESTES  <ctaf42@gmail.com>
	* regexp: regexp to get/set value

2008-03-04  Cedric GESTES  <ctaf42@gmail.com>
	* config-parser: added a basic parser, that construct the gui

2008-02-19  Cedric GESTES  <ctaf42@gmail.com>

	* gui-factory: added multichoice, singlechoise, checkbox
